# plagn

./: .gitignore  BuildMacOS.md  CMakeLists.txt  README.md  bootstrap.ps1  bootstrap.sh  plagn.code-workspace  vcpkg.json
docs/: README.md
docs/config/: README.md  exampleConf.conf
docs/config/plags/: mqtt.md  udp.md
docs/config/plags/plagHttpServer/: example.lua  exampleConf.conf  exampleGet.lua  examplePostFormData.lua  examplePostJson.lua  plagHttpServerUtils.lua
docs/config/plags/plagHttpServer/luaModules/: httpContentTypes.lua  httpContentUtils.lua  httpResponseCodes.lua
docs/config/plags/plagHttpServer/www/: index.html
docs/contribute/: README.md  buildLinux.md  buildMacOS.md  buildWindows.md
include/: Kable.hpp  Plag.hpp
include/datagrams/: Datagram.hpp  DatagramHttpServer.hpp  DatagramMap.hpp  DatagramModbus.hpp  DatagramMqtt.hpp  DatagramUdp.hpp
include/layer/: TcpClient.hpp  TlsClient.hpp  TransportLayer.hpp
include/plags/: PlagHttpServer.hpp  PlagModbus.hpp  PlagMqtt.hpp  PlagUdp.hpp
include/plags/mqtt/: MqttClient.hpp  MqttClientV4.hpp  MqttClientV5.hpp  MqttInterface.hpp
include/servers/: AsyncHttpServer.hpp  AsyncHttpServerUtils.hpp  AsyncTcpServer.hpp
include/utils/: LuaWrapper.hpp  PlagInterface.hpp  PropertyTreeReader.hpp  Utilities.hpp
run/: plagn.conf
src/: Kable.cpp  Plag.cpp  main.cpp
src/datagrams/: Datagram.cpp  DatagramHttpServer.cpp  DatagramMap.cpp  DatagramModbus.cpp  DatagramMqtt.cpp  DatagramUdp.cpp
src/layer/: TcpClient.cpp  TlsClient.cpp  TransportLayer.cpp
src/plags/: PlagHttpServer.cpp  PlagModbus.cpp  PlagMqtt.cpp  PlagUdp.cpp
src/plags/mqtt/: MqttClient.cpp  MqttClientV4.cpp  MqttClientV5.cpp  MqttInterface.cpp
src/servers/: AsyncHttpServer.cpp  AsyncTcpServer.cpp
src/utils/: LuaWrapper.cpp  PlagInterface.cpp  PropertyTreeReader.cpp  Utilities.cpp
